--- a/GymTorch/env/envs/train/cfg.yaml
+++ b/GymTorch/env/envs/train/cfg.yaml
@@ -60,7 +60,7 @@ environment:
 # Forward Dynamics Model (FDM) training configuration
 training:
   learning_rate: 3e-4
-  batch_size: 512
+  batch_size: 256
   storage_size: 45000
   num_epochs: 8
   shuffle_batch: True
@@ -95,14 +95,14 @@ architecture:
     input: 450  # COM_encoder output is included in the input  (360 + 32)
     output: 100
     shape: [256, 256, 128, 128]
-    activation: leakyrelu
+    activation: relu
     dropout: 0.2
     batchnorm: True
   command_encoder:
     input: 3
     output: 64
     shape: [32]
-    activation: leakyrelu
+    activation: relu
     dropout: 0.2
     batchnorm: True
   recurrence:
@@ -113,7 +113,7 @@ architecture:
   traj_predictor:
     input: 100
     shape: [64, 32, 16]
-    activation: leakyrelu
+    activation: relu
     dropout: 0.2
     batchnorm: True
     collision:
@@ -131,7 +131,7 @@ CVAE_training:
     n_latent_sample: 500
     learning_rate: 3e-4
     batch_size: 256 # 512
-    num_workers: 6
+    num_workers: 12
     shuffle_batch: True
     clip_gradient: False
     max_gradient_norm: 2.0
@@ -149,21 +149,21 @@ CVAE_architecture:
       input: 450  # COM_encoder output is included in the input  (360 + 32)
       output: 100
       shape: [ 256, 256, 128, 128 ]
-      activation: leakyrelu
+      activation: relu
       dropout: 0.2
       batchnorm: True
     waypoint_encoder:
       input: 2
       output: 64
       shape: [ 32 ]
-      activation: leakyrelu
+      activation: relu
       dropout: 0.2
       batchnorm: True
     command_encoder:
       input: 3
       output: 64
       shape: [ 32 ]
-      activation: leakyrelu
+      activation: relu
       dropout: 0.2
       batchnorm: True
     waypoint_recurrence_encoder:
@@ -180,14 +180,14 @@ CVAE_architecture:
       input: 300  # 100 (encoded_state) + 100 (encoded_waypoints) + 100 (encoded_command_traj)
       output: 16  # latent dimension (model outputs 'mean' and 'log_std' each of corresponding size'
       shape: [ 64, 32 ]
-      activation: leakyrelu
+      activation: relu
       dropout: 0.2
       batchnorm: True
     latent_decoder:
       input: 216  # 100 (encoded_state) + 100 (encoded_waypoints) + 16
       shape: [ 64, 64 ]
       output: 32
-      activation: leakyrelu
+      activation: relu
       dropout: 0.2
       batchnorm: True
     recurrence_decoder:
@@ -199,7 +199,7 @@ CVAE_architecture:
       input: 32
       output: 3
       shape: [ 32 ]
-      activation: leakyrelu
+      activation: relu
       dropout: 0.2
       batchnorm: True
 
